practice for local css, global css, and join bootsrap, jquery

--- a/src/app/todo-items/todo-items.component.html
+++ b/src/app/todo-items/todo-items.component.html
@@ -7,3 +7,9 @@
     <a href="#">刪除</a>
     </li>
 </ul>
+<div>
+  <strong>TodoItemsComponent中測試strong標籤</strong>
+</div>
+<div>
+  <span class="blue">TodoItemsComponent中測試blue class</span>
+</div>
