--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,2 +1,8 @@
 <h1>{{title}}</h1>
 <h2>{{ '現在時間 : ' + getDate() }}
+    <div>
+        <strong>HeaderComponent中測試strong標籤</strong>
+      </div>
+      <div>
+        <span class="blue">HeaderComponent中測試blue class</span>
+      </div>
