upload ngclass practice

--- a/src/app/todo-items/todo-items.component.html
+++ b/src/app/todo-items/todo-items.component.html
@@ -1,7 +1,8 @@
 <ul>
   <li *ngFor="let item of items">
     <label htmlFor="chk_{{item.id}}">
-      <input id="chk_{{item.id}}" type="checkbox" [checked]="item.done"> {{ item.value }}
+      <input id="chk_{{item.id}}" type="checkbox" [checked]="item.done" (click)="itemClick(item)"> 
+      <span [ngClass]="{'done' : item.done}">{{ item.value }}</span>
     </label>
     |
     <a href="#">刪除</a>
@@ -11,5 +12,5 @@
   <strong>TodoItemsComponent中測試strong標籤</strong>
 </div>
 <div>
-  <span class="blue">TodoItemsComponent中測試blue class</span>
+  <span [ngClass]="getBlueClass()">TodoItemsComponent中測試blue class</span>
 </div>
