--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,10 @@
 <app-header></app-header>
 
 <app-add-form></app-add-form>
+<br>
+////////試用pipe{{bio|json}}///////
+{{today|date}}
+///////////////////////////
 
 <app-todo-items ></app-todo-items>
 <div style="text-align:center">
