--- a/src/app/todo-items/todo-items.component.html
+++ b/src/app/todo-items/todo-items.component.html
@@ -1,14 +1,14 @@
 <ul>
   <li *ngFor="let item of getTodoList();let recordIndex = index;let firstRecord = first;let lastRecotd = last; let evenRecord = even; let oddRecord = odd">
     <label htmlFor="chk_{{item.id}}">
-      <input id="chk_{{item.id}}" type="checkbox" [checked]="item.done" (click)="itemClick(item)"> 
+      <input id="chk_{{item.id}}" type="checkbox" [checked]="item.done" (click)="itemClick(item)">
       <span [ngClass]="{'done' : item.done, 'text-danger': firstRecord, 'text-warning': lastRecotd, 'bg-info': evenRecord, 'bg-success': oddRecord}">
         {{ recordIndex }} . {{ item.value }}
       </span>
     </label>
     |
     <a href="#" (click)="delete(item)">刪除</a>
-    <span *ngIf="item.done">(已完成)</span>
+    <span>{{ item.done | todoDoneCheck:567:true }}</span>
     </li>
 </ul>
 <div>
