directive practice with error(how to set parameter in spec.ts? )

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,9 @@
 ///////////////////////////
 
 <app-todo-items ></app-todo-items>
+<button appBsButton>Button with Attribute Directive</button>
+<button appBsButton="danger" mouseDownClass="primary">Button (Danger <-> Primary)</button>
+<button appBsButton="info" mouseDownClass="success">Button (Info <-> Success)</button>
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!abc
